# icecream_arm

./: README.md
code/: README.md  drive_arm_joints.py  icecream_camera.py  icecream_driver.py  icecream_move.py
code/configuration/: ice_cream_arm_sensor.usd
git_turtorial/: README.md
ice_cream_0208.SLDASM/: package.xml
ice_cream_0208.SLDASM/launch/: gazebo.launch
ice_cream_0208.SLDASM/meshes/: link5.STL
ice_cream_SINGLE.SLDASM/: CMakeLists.txt  package.xml
ice_cream_SINGLE.SLDASM/config/: joint_names_ice_cream_SINGLE.SLDASM.yaml
ice_cream_SINGLE.SLDASM/launch/: display.launch  gazebo.launch
ice_cream_SINGLE.SLDASM/meshes/: fingerlink_L.STL  fingerlink_R.STL  link5.STL
ice_cream_SINGLE.SLDASM/urdf/: ice_cream_SINGLE.SLDASM.csv  ice_cream_SINGLE.SLDASM.urdf  ice_cream_SINGLE.SLDASM_resolved.urdf
icecream/code/: COORDINATES.md  icecream_kinematics.py  icecream_pose_reach.py
icecream/code/configuration/: ice_cream_arm_physics.usd
icecream/ice_cream_0208.SLDASM/ice_cream_0208.SLDASM/: CMakeLists.txt
icecream_model/: COLCON_IGNORE
icecream_model/launch/: display.launch
sim_code/: README.md  drive_arm_joints.py  ice_cream_arm.usd  ice_cream_single_arm.usd  ice_cream_single_test.py  icecream_3Dof-test.py  icecream_camera.py  icecream_driver.py  icecream_kinematics.py  icecream_move.py  icecream_pose_control.py  keyboard_home_tuner.py  load_single_arm_scene.py  test_jacobian_straight_line.py  urdf_to_usd.py
sim_code/configuration/: ice_cream_single_arm_physics.usd  ice_cream_single_arm_sensor.usd
test_for_communication/: test.txt
(+3 files in other folders)
